--- a/package.json
+++ b/package.json
@@ -16,8 +16,15 @@
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
-    "eslint": "8.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "12.1.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-react": "^7.29.4",
     "typescript": "4.6.2"
   }
 }
