--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test-all": "yarn check-format && yarn check-lint && yarn check-types"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.19.2",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -32,8 +34,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.29.4",
+    "husky": "^7.0.0",
     "prettier": "^2.6.0",
-    "typescript": "4.6.2",
-    "husky": "^7.0.0"
+    "typescript": "4.6.2"
   }
 }
