--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.19.2",
     "next": "12.1.0",
+    "next-plugin-antd-less": "^1.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -26,6 +27,7 @@
     "@types/react": "17.0.40",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "^7.32.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
